edited instructions a bit

--- a/public/members.html
+++ b/public/members.html
@@ -62,15 +62,15 @@
           </div>
           <div class="modal-body">
             <h2>Most workout apps have a preset list of exercises and equipment.<br>
-              The Let's Lift app allows a user to build their own workout using the equipment in 
-              their particular gym, and with whatever exercises they choose. The experienced
+              The Weights Work app allows a user to build their own workout using the equipment in 
+              their particular gym, and with whatever exercises they choose. The
               user can build their own workouts, or they can build any workout they see
               online or in a magazine.</h2>
             <h2>Each individualized workout consists of exercises, the weight used, 
               number of sets in each exercise, and the number of repetitions (reps) during each set.
               The user can keep track of sets completed and the rest time between sets during a workout.</h2>
             <h3>The Process:</h3>
-            <p>After logging in with your email address, click on the text: Click here to enter a new workout.
+            <p>After logging in with your email address, click on the text: "Click here to enter a new workout".
               Each user is allowed 5 workouts with 10 exercises each. <br>
               Fill in a name for this new workout and submit it with the Submit button.<br>
               The user is then shown the form to build the first exercise.<br>
@@ -109,10 +109,10 @@
               second button. That "Reps" label changes to the required number of sets completed, the color changes,
               and the clock starts over.<br>
               Work through your entire workout, easily keeping track of which exercise you're on, and checking off
-              each set as you finish them. The beeps during your rest time keep you from resting too much.<br>
+              each set as you finish them.<br>
               If you don't complete the required number of sets, clicking a Set button again will count down the label 
-              to however many reps you did complete. If a mistake is made, and you've clicked the button too many
-              times, just click the button repeatedly as it will count down to zero, and start over. Just stop
+              to however many reps you did complete. If you mistakenly click the button too many
+              times, just click the button repeatedly to count down to zero, and start over. Just stop
               when it displays the correct number of completed reps.<br>
               Note: the clock continues to count while choosing the correct number of reps completed!
             </p>
