--- a/public/signup.html
+++ b/public/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Let's Lift</title>
+  <title>Weights Work!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
