small changes in instructions

--- a/public/members.html
+++ b/public/members.html
@@ -95,7 +95,7 @@
               The user is then taken back to the list of available workouts.<br>
               <h4>Delete</h4>
               The user can delete a workout by merely clicking the Delete button underneath each individual
-              workout.<br>
+              workout. Careful: this action can not be reversed!<br>
               <h4>Workout</h4>
               Click on the name of the workout to start your session.
               You'll see the title of your current workout, and then a list of each exercise name,
@@ -112,12 +112,12 @@
               each set as you finish them.<br>
               If you don't complete the required number of sets, clicking a Set button again will count down the label 
               to however many reps you did complete. If you mistakenly click the button too many
-              times, just click the button repeatedly to count down to zero, and start over. Just stop
+              times, just click the button repeatedly to count down to zero and start over. Just stop
               when it displays the correct number of completed reps.<br>
               Note: the clock continues to count while choosing the correct number of reps completed!
             </p>
             <h4>When finished with your workout, congratulations! Just hit the Workout Finished button at 
-              the bottom of the workout, and log out.</h4>
+              the bottom of the workout and log out.</h4>
           </div>
           <div class="modal-footer">
             <button type="button" data-dismiss="modal">Close</button>
