--- a/public/members.html
+++ b/public/members.html
@@ -31,8 +31,8 @@
         </div>
         <div class="col-xs-4 text-center">
             <button type="button" data-toggle="modal" data-target="#deleteWarning">
-                Delete User
-              </button>
+              Delete User
+            </button>
         </div>
       </div>
     </div>
@@ -189,7 +189,7 @@
     </div>
     <!-- End of Bootstrap modal code -->
     
-    <!-- Modal, warns user that deleting the user is not recoverable -->
+    <!-- Modal, warns user that deleting the workout is not recoverable -->
     <div class="modal fade" id="deleteWorkoutWarning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
