added welcome message, edited instructions

--- a/public/login.html
+++ b/public/login.html
@@ -33,7 +33,17 @@
       </div>
     </div>
     <!-- End of Bootstrap modal code -->
-    <div class="row">
+    <div class="row" id="introExplain">
+      <div class="col-sm-8 col-sm-offset-2">
+        <h2 class="text-center"><span class="namebox">Welcome to the Weights Work! App</span></h2>
+        <h2><span class="namebox">Most workout apps have a preset list of exercises and equipment.<br>
+          But the Weights Work app allows you to build your own workout using the equipment in 
+          your particular gym or home with whatever exercises you choose. You can design 
+          your own workouts, or build any workout you've seen
+          online or in a magazine.</span></h2>
+      </div>
+    </div>
+    <div class="row" id="formMarginBottom">
       <div class="col-sm-3 text-center" id="signupinLogin">
         <h2><span class="namebox">New Users</span></h2>
         <button id="signupDiv"><span><a href="/signup">Create an Account</a></span></button>
