--- a/public/members.html
+++ b/public/members.html
@@ -61,20 +61,15 @@
             <h2 class="modal-title text-center" id="myModalLabel">Instructions</h2>
           </div>
           <div class="modal-body">
-            <h2>Most workout apps have a preset list of exercises and equipment.<br>
-              The Weights Work app allows a user to build their own workout using the equipment in 
-              their particular gym, and with whatever exercises they choose. The
-              user can build their own workouts, or they can build any workout they see
-              online or in a magazine.</h2>
             <h2>Each individualized workout consists of exercises, the weight used, 
               number of sets in each exercise, and the number of repetitions (reps) during each set.
-              The user can keep track of sets completed and the rest time between sets during a workout.</h2>
+              You can keep track of sets completed and the rest time between sets during a workout.</h2>
             <h3>The Process:</h3>
             <p>After logging in with your email address, click on the text: "Click here to enter a new workout".
-              Each user is allowed 5 workouts with 10 exercises each. <br>
+              You are allowed 5 workouts with 10 exercises each. <br>
               Fill in a name for this new workout and submit it with the Submit button.<br>
-              The user is then shown the form to build the first exercise.<br>
-              Enter the required information in the input fields, and click the Submit button.<br>
+              You are then shown the form to build the first exercise.<br>
+              Enter the required information in the forms, and click the Submit button.<br>
               You're then given a choice of entering more exercises to build out your workout,
               or Finish entering new exercises.<br>
               If adding more exercises, repeat the sequence. When you're finished entering new exercises,
@@ -82,25 +77,24 @@
               Your new workout name is then put in a list of your available workouts. Each of these has buttons to either
               Edit or Delete the workout.<br>
               <h4>Edit</h4>
-              The Edit button shows the user their full workout with input fields that allow them to change
-              the workout. Each field will be labeled with the current information. 
-              This page shows the information for all 10 available exercises, as the user can
-              add more exercises in the empty exercise forms (up to a total of 10) to their workout.<br>
+              The Edit button shows you the full workout with input forms that allow you to change
+              the workout. Each field is labeled with what's currently in your workout. 
+              You can add more exercises in the empty exercise forms (up to a total of 10).<br>
               IMPORTANT: Make your changes to each exercise, and select the "Submit Changes For This Exercise" button to
               store the changes for that exercise. 
               After the "Submit Changes For This Exercise" button is clicked, the input fields then display
               the changes that you just made.<br>
               You may make changes to any of your exercises in these forms, <br>
-              but the user MUST then click the Finished Editing button at the  bottom of all the forms.<br>
-              The user is then taken back to the list of available workouts.<br>
+              but you MUST then click the Finished Editing button at the  bottom of all the forms.<br>
+              You are then taken back to the list of available workouts.<br>
               <h4>Delete</h4>
-              The user can delete a workout by merely clicking the Delete button underneath each individual
+              You can delete a workout by merely clicking the Delete button underneath each individual
               workout. Careful: this action can not be reversed!<br>
               <h4>Workout</h4>
               Click on the name of the workout to start your session.
               You'll see the title of your current workout, and then a list of each exercise name,
               the associated number of sets and reps, and the assigned weight.<br>
-              Next, there's a row of buttons that represent each set. As the user finishes their first set, click the first button.<br>
+              Next, there's a row of buttons that represent each set. As you finish your first set, click the first button.<br>
               The label of the button, "Reps", will change to the number of assigned reps for that exercise, 
               and the button changes color.<br>
               This is also when the clock starts. It is counting your rest time between sets. 
@@ -110,9 +104,9 @@
               and the clock starts over.<br>
               Work through your entire workout, easily keeping track of which exercise you're on, and checking off
               each set as you finish them.<br>
-              If you don't complete the required number of sets, clicking a Set button again will count down the label 
+              If you don't complete the required number of sets, clicking a Set button again will count down 
               to however many reps you did complete. If you mistakenly click the button too many
-              times, just click the button repeatedly to count down to zero and start over. Just stop
+              times, just click the button repeatedly to count down to zero and start over. Stop
               when it displays the correct number of completed reps.<br>
               Note: the clock continues to count while choosing the correct number of reps completed!
             </p>
