wording changes in Instructions

--- a/public/login.html
+++ b/public/login.html
@@ -38,7 +38,7 @@
         <h2 class="text-center"><span class="namebox">Welcome to the Weights Work! App</span></h2>
         <h2><span class="namebox">Most workout apps have a preset list of exercises and equipment.<br>
           But the Weights Work app allows you to build your own workout using the equipment in 
-          your particular gym or home with whatever exercises you choose. You can design 
+          your personal gym or home and the exercises you choose. You can design 
           your own workouts, or build any workout you've seen
           online or in a magazine.</span></h2>
       </div>
