--- a/public/members.html
+++ b/public/members.html
@@ -63,54 +63,46 @@
           <div class="modal-body">
             <h2>Each individualized workout consists of exercises, the weight used, 
               number of sets in each exercise, and the number of repetitions (reps) during each set.
-              You can keep track of sets completed and the rest time between sets during a workout.</h2>
+              The app allows you to keep track of sets completed and the rest time between sets during a workout.</h2>
             <h3>The Process:</h3>
-            <p>After logging in with your email address, click on the text: "Click here to enter a new workout".
+            <p>Log in with your email address and click on the text: "Click here to enter a new workout."
               You are allowed 5 workouts with 10 exercises each. <br>
-              Fill in a name for this new workout and submit it with the Submit button.<br>
-              You are then shown the form to build the first exercise.<br>
-              Enter the required information in the forms, and click the Submit button.<br>
-              You're then given a choice of entering more exercises to build out your workout,
-              or Finish entering new exercises.<br>
-              If adding more exercises, repeat the sequence. When you're finished entering new exercises,
-              click Finish.<br>
-              Your new workout name is then put in a list of your available workouts. Each of these has buttons to either
-              Edit or Delete the workout.<br>
+              Fill in a name for your new workout and click the Submit button.<br>
+              Input fields to build the first exercise appears.<br>
+              Enter the required information in the fields, and click the Submit button.<br>
+              You may enter more exercises to build out your workout by repeating the sequence.<br>
+              When you're finished, click Finish.<br>
+              Your new workout is then added to the list of available workouts.<br>
               <h4>Edit</h4>
-              The Edit button shows you the full workout with input forms that allow you to change
+              The Edit button shows you the full workout with input fields that allow you to alter or add to
               the workout. Each field is labeled with what's currently in your workout. 
-              You can add more exercises in the empty exercise forms (up to a total of 10).<br>
-              IMPORTANT: Make your changes to each exercise, and select the "Submit Changes For This Exercise" button to
-              store the changes for that exercise. 
-              After the "Submit Changes For This Exercise" button is clicked, the input fields then display
-              the changes that you just made.<br>
-              You may make changes to any of your exercises in these forms, <br>
-              but you MUST then click the Finished Editing button at the  bottom of all the forms.<br>
-              You are then taken back to the list of available workouts.<br>
+              To save your changes for each exercise, select the "Submit Changes For This Exercise" button. 
+              The input fields then display the changes that you made.<br>
+              Continue editing your exercises, submitting the changes for each exercise.<br>
+              IMPORTANT: When you complete your editing, you MUST click the Finished Editing button at the bottom.<br>
+              You will return to the list of available workouts.<br>
               <h4>Delete</h4>
-              You can delete a workout by merely clicking the Delete button underneath each individual
+              You may delete a workout by clicking the Delete button under each individual
               workout. Careful: this action can not be reversed!<br>
               <h4>Workout</h4>
               Click on the name of the workout to start your session.
               You'll see the title of your current workout, and then a list of each exercise name,
               the associated number of sets and reps, and the assigned weight.<br>
-              Next, there's a row of buttons that represent each set. As you finish your first set, click the first button.<br>
-              The label of the button, "Reps", will change to the number of assigned reps for that exercise, 
-              and the button changes color.<br>
-              This is also when the clock starts. It is counting your rest time between sets. 
+              A row of buttons represent each set. After finishing the first set, click the first button.<br>
+              The "Reps" label of the button will change to the number of assigned reps for that exercise, 
+              and the button changes color to show that you've completed that set.<br>
+              The clock automatically starts counting your rest time between sets. 
               Android users will hear the elapsed time every thirty seconds.  
-              When you're ready, complete your next set, and then click the 
-              second button. That "Reps" label changes to the required number of sets completed, the color changes,
-              and the clock starts over.<br>
-              Work through your entire workout, easily keeping track of which exercise you're on, and checking off
-              each set as you finish them.<br>
-              If you don't complete the required number of sets, clicking a Set button again will count down 
-              to however many reps you did complete. If you mistakenly click the button too many
-              times, just click the button repeatedly to count down to zero and start over. Stop
+              When you're ready, complete your next set, and click the 
+              second button.<br>
+              Complete your entire workout, checking off each set as you finish them.<br>
+              If you don't complete the required number of reps, click the same button again will count down 
+              to however many reps you did complete. If you click the button too many
+              times, just keep clicking to count down to zero and start over. Stop
               when it displays the correct number of completed reps.<br>
-              Note: the clock continues to count while choosing the correct number of reps completed!
+              Note: the clock continues to count while correcting the number of reps completed!
             </p>
-            <h4>When finished with your workout, congratulations! Just hit the Workout Finished button at 
+            <h4>When you are finished with your workout, congratulate yourself! Then hit the Workout Finished button at 
               the bottom of the workout and log out.</h4>
           </div>
           <div class="modal-footer">
