continuin with editing Instructions

--- a/public/members.html
+++ b/public/members.html
@@ -64,16 +64,19 @@
             <h2>Each individualized workout consists of exercises, the weight used, 
               number of sets in each exercise, and the number of repetitions (reps) during each set.
               The app allows you to keep track of sets completed and the rest time between sets during a workout.</h2>
-            <h3>The Process:</h3>
-            <p>Log in with your email address and click on the text: "Click here to enter a new workout."
-              You are allowed 5 workouts with 10 exercises each. <br>
-              Fill in a name for your new workout and click the Submit button.<br>
-              Input fields to build the first exercise appears.<br>
-              Enter the required information in the fields, and click the Submit button.<br>
-              You may enter more exercises to build out your workout by repeating the sequence.<br>
-              When you're finished, click Finish.<br>
+            <h3><b>The Process:</b></h3>
+            <p>Log in with your email address and password.<br>
+              Click: <b>Click here to enter a new workout.</b><br>
+              Create a name for your new workout.<br>
+              Click: <b>Submit</b><br>
+              You will see a form to build your first exercise. Enter the required information 
+              in the fields.<br>
+              Click: <b>Submit</b><br>
+              To enter more exercises, click: <b>Add More Exercises</b> and repeat the sequence.<br>
+              When you're finished, click: <b>Finish</b><br>
               Your new workout is then added to the list of available workouts.<br>
-              <h4>Edit</h4>
+              Note: You are allowed 5 workouts with 10 exercises each. <br>
+              <h4><b>Edit:</b></h4>this is as far as I got with Dawn's edits.
               The Edit button shows you the full workout with input fields that allow you to alter or add to
               the workout. Each field is labeled with what's currently in your workout. 
               To save your changes for each exercise, select the "Submit Changes For This Exercise" button. 
@@ -81,10 +84,10 @@
               Continue editing your exercises, submitting the changes for each exercise.<br>
               IMPORTANT: When you complete your editing, you MUST click the Finished Editing button at the bottom.<br>
               You will return to the list of available workouts.<br>
-              <h4>Delete</h4>
+              <h4><b>Delete:</b></h4>
               You may delete a workout by clicking the Delete button under each individual
               workout. Careful: this action can not be reversed!<br>
-              <h4>Workout</h4>
+              <h4><b>Workout:</b></h4>
               Click on the name of the workout to start your session.
               You'll see the title of your current workout, and then a list of each exercise name,
               the associated number of sets and reps, and the assigned weight.<br>
