more editing of Instructions

--- a/public/members.html
+++ b/public/members.html
@@ -61,59 +61,58 @@
             <h2 class="modal-title text-center" id="myModalLabel">Instructions</h2>
           </div>
           <div class="modal-body">
-            <h2>Each individualized workout consists of exercises, the weight used, 
+            <h2>Workouts consist of exercises, the weight used, 
               number of sets in each exercise, and the number of repetitions (reps) during each set.
-              The app allows you to keep track of sets completed and the rest time between sets during a workout.</h2>
+              You track sets completed and the rest time between sets.</h2><br>
             <h3><b>The Process</b></h3><br>
             <p>Log in with your email address and password.<br>
               Click: <b>Click here to enter a new workout.</b><br>
               Create a name for your new workout.<br>
               Click: <b>Submit</b><br>
-              You will see a form to build your first exercise. Enter the required information 
+              A form to build your first exercise appears. Enter the required information 
               in the fields.<br>
               Click: <b>Submit</b><br>
-              To enter more exercises, click: <b>Add More Exercises</b> and repeat the sequence.<br>
-              When you're finished, click: <b>Finish</b><br>
+              Enter more exercises. Click: <b>Add More Exercises</b> and repeat the sequence.<br>
+              Quit entering more exercises. Click: <b>Finish</b>.<br>
               Your new workout is then added to the list of available workouts.<br>
               Note: You are allowed 5 workouts with 10 exercises each. <br><br>
               <h4><b>Edit</b></h4>
-              The <b>Edit</b> button shows the full workout of ten exercises with input fields 
-              that allow changes to the workout.<br>
-              Each field is labeled with the current information.<br>
-              You can add more exercises to your workout in the fields with empty labels (up to a total of ten).<br>
-              To save your changes for each exercise, click: <b>Submit Changes For This Exercise</b>. 
-              The input fields will then display the changes that you made.<br>
-              Continue editing your exercises, submitting the changes for each exercise.<br>
-              <b>IMPORTANT:</b> When you complete your editing, you <b>MUST</b> click: <b>Finished Editing</b> at the bottom.<br>
+              The <b>Edit</b> button shows the full workout of ten exercises. Change the workout
+              by entering new information in the input fields.<br>
+              Each field is labeled with the current exercise information.<br>
+              Add more exercises in the fields with empty labels (up to a total of ten).<br>
+              Save your changes for each exercise. Click: <b>Submit Changes For This Exercise</b>. 
+              The input fields then display the changes that you just made.<br>
+              <b>IMPORTANT:</b> When finished editing, you <b>MUST</b> click: <b>Finished Editing</b> at the bottom.<br>
               You will return to the list of available workouts.<br><br>
-              <h4><b>Delete:</b></h4>
+              <h4><b>Delete</b></h4>
               To delete a workout, click: <b>Delete</b>.<br>
-              <b>IMPORTANT:</b> This action can not be reversed!<br><br>
+              <b>IMPORTANT:</b> This action cannot be reversed!<br><br>
               <h4><b>Workout</b></h4>
-              Click on the name of your chosen workout to start your session.<br>
-              This page shows the <b>Name</b> of your current workout, and then a list of each <b>Exercise Name</b>,
+              Click: the <b>name of your chosen workout</b> to start your session.<br>
+              You're shown the <b>Name</b> of your current workout, and then a list of each <b>Exercise Name</b>,
               the associated number of <b>Sets</b> and <b>Reps</b>, and the assigned <b>Weight</b>.<br>
               A row of yellow buttons labelled <b>Reps</b> represent each set for each exercise. 
               Example: Five sets will have five buttons.<br>
               Perform your first set. Then click: <b>the first button</b>.<br>
-              The <b>Reps</b> label of the button will change to the number of assigned reps for that exercise, 
-              showing that you have completed the required number of reps.<br>
-              The button <b>changes color to red</b> to show that you've completed that set.<br>
+              The <b>Reps</b> label of the button changes to the number of assigned reps for that exercise;
+              this shows that you completed the required number of reps.<br>
+              The button <b>changes color to red</b> to show you've completed that set.<br>
               <b>Note:</b> The clock starts counting your rest time between sets. <b>Pay attention so 
                 you don't rest too long!</b>
               (Android users will hear the elapsed time every thirty seconds.)<br>
-              When you're ready, complete your next set, and click: <b>the 
+              When you're ready, perform your next set, and click: <b>the 
               second button</b>. The clock starts over.<br>
-              Complete your entire workout, checking off each set as you finish them.<br>
+              Complete your entire workout, clicking each set button after you do a set.<br>
               <b>Note:</b> If you can't complete the required number of reps, click: 
-              <b>the same set button</b> again. The label will count down 
-              to however many reps you did complete. If you click the button too many
+              <b>the same set button</b> again. The label counts down with each click
+              to the number of reps you did complete. If you click the button too many
               times, just click repeatedly to count down to zero and start over. Stop
               when it displays the correct number of completed reps.<br>
-              The clock continues to count while correcting the number of reps completed!
+              The clock continues to count while correcting the number of reps completed.
             </p>
-            <h4>When you are finished with your workout, congratulate yourself!<br>
-              Click: <b>Workout Finished</b>. You'll be taken back to the list of available Workouts.<br> 
+            <h4>When finished with your workout, congratulate yourself!<br>
+              Click: <b>Workout Finished</b>. You'll be taken back to the list of available workouts.<br> 
               Click: <b>Log out</b>.</h4>
           </div>
           <div class="modal-footer">
