--- a/public/login.html
+++ b/public/login.html
@@ -36,11 +36,9 @@
     <div class="row" id="introExplain">
       <div class="col-sm-8 col-sm-offset-2">
         <h2 class="text-center"><span class="namebox">Welcome to the Weights Work! App</span></h2>
-        <h2><span class="namebox">Most workout apps have a preset list of exercises and equipment.<br>
-          But the Weights Work app allows you to build your own workout using the equipment in 
-          your personal gym or home and the exercises you choose. You can design 
-          your own workouts, or build any workout you've seen
-          online or in a magazine.</span></h2>
+        <h2><span class="namebox">Most workout apps have preset lists of exercises and equipment.<br>
+          But <b>Weights Work!</b> allows you to design custom workouts using your gym or home equipment. 
+          Build your own workouts from any source!</span></h2>
       </div>
     </div>
     <div class="row" id="formMarginBottom">
