changed title welcome of login page

--- a/public/login.html
+++ b/public/login.html
@@ -35,7 +35,7 @@
     <!-- End of Bootstrap modal code -->
     <div class="row" id="introExplain">
       <div class="col-sm-8 col-sm-offset-2">
-        <h2 class="text-center"><span class="namebox">Welcome to the Weights Work! App</span></h2>
+        <h2 class="text-center"><span class="namebox">Welcome to Weights Work!</span></h2>
         <h2><span class="namebox">Most workout apps have preset lists of exercises and equipment.<br>
           But <b>Weights Work!</b> allows you to design custom workouts using your gym or home equipment. 
           Build your own workouts from any source!</span></h2>
