took out a mark

--- a/public/members.html
+++ b/public/members.html
@@ -42,7 +42,7 @@
   <div class="wrapper">
     <div class="row">
       <div class="col-xs-12">
-        <h2><span class="namebox">Welcome <span class="member-name"></span>!!</span></h2>
+        <h2><span class="namebox">Welcome <span class="member-name"></span>!</span></h2>
       </div>
     </div>
 
