shortened edit forms for UX

--- a/public/members.html
+++ b/public/members.html
@@ -124,30 +124,30 @@
     <!-- End of Bootstrap code -->
 
     <div class="row" id="workoutRow">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-sm-offset-2 col-sm-8">
         <h2><span class="namebox">Click on a previously entered workout name to workout.</span></h2>
           <div id="availableWorkouts"></div>
       </div>
     </div>
 
     <div class="row" id="enterRowHeading">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-sm-offset-2 col-sm-8">
         <h2><span class="namebox" id="enterWorkout">Click here to enter a new workout.</span></h2>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-xs-12" id="entryForm">
+      <div class="col-xs-12 col-sm-offset-2 col-sm-8" id="entryForm">
       </div>
     </div>
     
     <div class="row">
-      <div class="col-xs-12" id="exerciseEntryForm">
+      <div class="col-xs-12 col-sm-offset-2 col-sm-8" id="exerciseEntryForm">
       </div>
     </div>
 
     <div class="row"> <!-- this div holds the forms to edit existing exercises-->
-      <div class="col-xs-12" id="editExercisesForms">
+      <div class="col-xs-12 col-sm-offset-2 col-sm-8" id="editExercisesForms">
         <h3>holder area for editing exercises</h3>
       </div>
     </div>
