slight change for updating sake

--- a/public/signup.html
+++ b/public/signup.html
@@ -55,7 +55,7 @@
                   <br>There's no need to enter your actual email address. Just make up something that
                   you'll remember when you want to use the workout app.
                   <br>Please use the form name@anything.com, and 
-                  a six digit password. Don't forget your password!
+                  a six digit password. Please don't forget your password!
                 </h2>
               </div>
               <div class="modal-footer">
