--- a/public/members.html
+++ b/public/members.html
@@ -28,6 +28,7 @@
         
         <div class="col-xs-4 text-center">
           <h3 id="pageTitle">Weights Work!</h3>
+          <a href="https://ko-fi.com/B0B259GUJ" target="_blank"><h5 id="webdev">by Tom McLaughlin</h5></a>
         </div>
         <div class="col-xs-4 text-center">
             <button type="button" data-toggle="modal" data-target="#deleteWarning">
