--- a/public/login.html
+++ b/public/login.html
@@ -14,6 +14,7 @@
     <div class="container-fluid">
       <div class="text-center">
           <h2 id="pageTitle">Weights Work!</h2>
+          <a href="https://ko-fi.com/B0B259GUJ" target="_blank"><h5 id="webdev">by Tom McLaughlin</h5></a>
       </div>
     </div>
   </nav>
